# Gilligan

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Gilligan.pro  README.md  generate.cpp  generate.hpp  gilligan.cpp  gilligan.hpp  gilligan.ui  main.cpp  utils.cpp  utils.hpp  validate.cpp  validate.hpp
